Changes by frede